--- a/src/app/Components/password-manager-summary/password-manager-summary.component.html
+++ b/src/app/Components/password-manager-summary/password-manager-summary.component.html
@@ -1,38 +1,82 @@
 <mat-toolbar color="primary">
-    <span>Personal Password Manager</span>
- </mat-toolbar>
+  <span>Personal Password Manager</span>
+</mat-toolbar>
 
 
- <div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> Catgory</th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="app">
-          <th mat-header-cell *matHeaderCellDef> Application </th>
-          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="userName">
-          <th mat-header-cell *matHeaderCellDef> User Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-        <ng-container matColumnDef="password">
-            <th mat-header-cell *matHeaderCellDef>Password</th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
-          </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      
-      
- </div>
 
+
+<div class="p-5">
+  <fieldset class="table-card">
+    <div class="timesheets-table timesheets-table-input mt-2">
+      <div class="thead">
+        <div class="flex-row row m-0 p-3 align-items-center border-bottom">
+          <div class="col col-2 p-0 m-0">
+            <div class="text-overflow-hide font-size-14 font-weight-500 light-grey-text">Category</div>
+          </div>
+          <div class="col col-2 p-0 m-0">
+            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Application Name</div>
+          </div>
+          <div class="col col-3 p-0 m-0">
+            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">User Name</div>
+          </div>
+          <div class="col col-3 p-0 m-0">
+            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Encrypted Password</div>
+          </div>
+          <div class="col col-2 p-0 m-0">
+            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Action</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="gridScroll scroll-height" id='gridHeight' infiniteScroll [infiniteScrollDistance]="0.1"
+      [infiniteScrollThrottle]="50" [scrollWindow]="false" #tabsContentRef>
+      <div class="internal-table">
+        <div class="tbody" *ngFor="let password of passwordList; let i = index">
+          <div>
+            <div class="flex-row row m-0 p-3 align-items-center">
+              <div class="col col-2 p-0 m-0">
+                <div class="associate">
+                  <div class="font-size-14 font-weight-400 text-overflow-hide">
+                    {{password.category}}
+                  </div>
+                </div>
+              </div>
+              <div class="col col-2 p-0 m-0">
+                <div class="associate">
+                  <div class="font-size-14 font-weight-400 text-overflow-hide">
+                    {{password.app}}
+                  </div>
+                </div>
+              </div>
+              <div class="col col-3 p-0 m-0">
+                <div class="associate">
+                  <div class="font-size-14 font-weight-400 text-overflow-hide">
+                    {{ password.userName}}
+                  </div>
+                </div>
+              </div>
+              <div class="col col-3 p-0 m-0">
+                <div class="associate">
+                  <div class="font-size-14 font-weight-400 text-overflow-hide">
+                    {{password.encryptedPassword}}
+                  </div>
+                </div>
+              </div>
+              <div class="primary-color col col-2 p-0 m-0">
+                <span class="pointer p-1 icon-hover material-symbols-outlined">
+                  visibility
+                </span>
+                <span (click)="setPasswordDetails(password)" class="pointer p-1 icon-hover material-symbols-outlined">
+                  edit
+                </span>
+                <span class="pointer p-1 icon-hover material-symbols-outlined">
+                  delete
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </fieldset>
+</div>
