Add password and Delete password changes with encrpytion and decryption

--- a/src/app/Components/password-manager-summary/password-manager-summary.component.html
+++ b/src/app/Components/password-manager-summary/password-manager-summary.component.html
@@ -3,9 +3,10 @@
 </mat-toolbar>
 
 
-
-
-<div class="p-5">
+<div class="d-flex justify-content-end px-5 pt-5">
+  <button type="button" class="btn btn-outline-secondary" (click)="setPasswordDetails(null)">Add Password</button>
+</div>
+<div class="px-5 pt-2">
   <fieldset class="table-card">
     <div class="timesheets-table timesheets-table-input mt-2">
       <div class="thead">
@@ -69,7 +70,7 @@
                 <span (click)="setPasswordDetails(password)" class="pointer p-1 icon-hover material-symbols-outlined">
                   edit
                 </span>
-                <span class="pointer p-1 icon-hover material-symbols-outlined">
+                <span (click)="DeletePassword(password.passwordManagerId)" class="pointer p-1 icon-hover material-symbols-outlined">
                   delete
                 </span>
               </div>
