--- a/src/app/Components/add-password/add-password.component.html
+++ b/src/app/Components/add-password/add-password.component.html
@@ -16,7 +16,8 @@
             <div>
                 <label>Password</label>
                 <mat-form-field class="w-100" appearance="fill" placeholder="Password">
-                    <input matInput formControlName="password" />
+                    <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" formControlName="password" required>
+                    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     <mat-label>Password</mat-label>
                     <mat-error>This field is required</mat-error>
                 </mat-form-field>
