View Password Component added and User manual added and environment file changes

--- a/src/app/Components/add-password/add-password.component.html
+++ b/src/app/Components/add-password/add-password.component.html
@@ -42,5 +42,5 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="SavePassword(passwordForm.value)">Save</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="SavePassword(passwordForm.value)">Submit</button>
 </div>
