--- a/src/app/Components/password-manager-summary/password-manager-summary.component.html
+++ b/src/app/Components/password-manager-summary/password-manager-summary.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="px-5 pt-2">
   <fieldset class="table-card">
-    <div class="timesheets-table timesheets-table-input mt-2">
+    <div class=" mt-2">
       <div class="thead">
         <div class="flex-row row m-0 p-3 align-items-center border-bottom">
           <div class="col col-2 p-0 m-0">
@@ -21,7 +21,7 @@
             <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">User Name</div>
           </div>
           <div class="col col-3 p-0 m-0">
-            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Encrypted Password</div>
+            <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Password</div>
           </div>
           <div class="col col-2 p-0 m-0">
             <div class="text-overflow-hide font-size-14 font-weight-600 light-grey-text">Action</div>
@@ -59,12 +59,12 @@
               <div class="col col-3 p-0 m-0">
                 <div class="associate">
                   <div class="font-size-14 font-weight-400 text-overflow-hide">
-                    {{password.encryptedPassword}}
+                    *************
                   </div>
                 </div>
               </div>
               <div class="primary-color col col-2 p-0 m-0">
-                <span class="pointer p-1 icon-hover material-symbols-outlined">
+                <span class="pointer p-1 icon-hover material-symbols-outlined" (click)="setPasswordDetails(password,true)">
                   visibility
                 </span>
                 <span (click)="setPasswordDetails(password)" class="pointer p-1 icon-hover material-symbols-outlined">
